// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton Editor Node builds the expected component 1`] = `
<div>
  <div
    className="text-chunk obojobo-draft--chunks--action-button pad"
  >
    <div
      className="obojobo-draft--components--button align-center"
    >
      <div
        className="button"
      />
    </div>
  </div>
</div>
`;

exports[`ActionButton Editor Node builds the expected component when selected 1`] = `
<div>
  <div
    className="text-chunk obojobo-draft--chunks--action-button pad"
  >
    <div
      className="obojobo-draft--components--button align-center"
    >
      <div
        className="button"
      />
    </div>
    <div
      className="trigger-box"
      contentEditable={false}
    >
      <div
        className="box-border"
      >
        <div
          className="trigger-list"
        >
          <div
            className="title"
          >
            When the button is clicked:
          </div>
        </div>
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center add-action"
        >
          <button
            className="button"
            onClick={[Function]}
          >
            Edit Triggers
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionButton Editor Node builds the expected component when selected 2`] = `
Object {
  "isFocused": true,
  "isSelected": true,
  "node": Object {
    "data": Object {
      "get": [Function],
    },
  },
}
`;
